--- a/style.css
+++ b/style.css
@@ -1,8 +1,13 @@
-.album{
+/* .album{
     width: calc(100% / 3);
     text-align: center;
-}
+} */
+
 .album img{
-    object-fit: cover;
-    width: 100%;
+    width: 300px;
+    height: 300px;
+    padding: 15px;
+}
+.my-nav{
+    height: 80px;
 }
